Slight rework + log4j rework + rgb formatting (other stuff coming later)