@@ -8,8 +8,15 @@ group 'com.cleanroommc'
 version '0.10'
 archivesBaseName = 'bouncepad'
 
-def compiler_arguments = [
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
+}
+
+def compilerArgs = [
         '--add-exports=java.base/jdk.internal.access=ALL-UNNAMED',
+        '--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED',
 ]
 
 repositories {
@@ -30,11 +37,17 @@ configurations {
 }
 
 dependencies {
-    implementation 'zone.rong:imaginebreaker:2.0'
+    implementation 'zone.rong:imaginebreaker:2.1'
 
     implementation 'org.apache.logging.log4j:log4j-api:2.22.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.22.0'
     annotationProcessor 'org.apache.logging.log4j:log4j-core:2.22.0'
+
+    implementation 'org.jline:jline:3.25.1'
+    implementation 'org.jline:jline-terminal-jansi:3.25.1'
+    implementation ('net.minecrell:terminalconsoleappender:1.3.0') {
+        transitive = false
+    }
 
     implementation 'org.ow2.asm:asm:9.6'
     implementation 'org.ow2.asm:asm-commons:9.6'
@@ -59,32 +72,22 @@ test {
     useJUnitPlatform()
 }
 
-for (int i in 9 .. 21) {
-    tasks.register("testJava${i}", Test) {
-        group 'verification'
-        it.getJavaLauncher().set(javaToolchains.launcherFor {
-            languageVersion = JavaLanguageVersion.of(i)
-        })
-        useJUnitPlatform()
-    }
-}
-
 tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs.addAll(compiler_arguments)
-}
-
-tasks.named('compileTestJava') {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    options.encoding 'UTF-8'
+    options.compilerArgs.addAll(compilerArgs)
 }
 
 tasks.register('bounce', JavaExec) {
+    doFirst {
+        println javaVersion
+    }
     classpath = sourceSets.main.runtimeClasspath
     jvmArgs '-Djava.system.class.loader=com.cleanroommc.bouncepad.BouncepadClassLoader'
+    systemProperty 'bouncepad.doNotProcessArguments', 'true'
     mainClass = 'com.cleanroommc.bouncepad.Bouncepad'
 }
 
-idea.project.settings.compiler.javac.javacAdditionalOptions = compiler_arguments.join(' ')
+idea.project.settings.compiler.javac.javacAdditionalOptions = compilerArgs.join(' ')
 
 publishing {
     publications {
